--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.2",
     "firebase": "^9.6.3",
+    "firebase-tools": "^10.1.1",
+    "firebaseui": "^6.0.0",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebaseui": "^6.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
